# oaslananka-_-kicad-mcp-pro

./: .env.example  .gitignore  .gitlab-ci.yml  .npmrc  BASELINE_FAILURES.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.kicad10  GOVERNANCE.md  OPERATIONS.md  PUBLIC_LISTING.md  PUBLIC_LISTING_READY.md  README.md  SECURITY.md  Taskfile.yml  azure-pipelines.yml  docker-compose.yml  mcp.json  mkdocs.yml  package.json  pnpm-lock.yaml  pyproject.toml  release-please-config.json  renovate.json  server.json  smithery.yaml  uv.toml
.azure/pipelines/: azure-pipelines.yml  ci.yml  security.yml
.github/: CODEOWNERS  dependabot.yml  labeler.yml
.github/rulesets/: main.json  release-tags.json
.github/workflows/: actions-maintenance.yml  auto-label.yml  branch-cleanup.yml  ci.yml  codeql.yml  commitlint.yml  dependabot-auto-merge.yml  docker-publish.yml  docs.yml  gitleaks.yml  hadolint.yml  homebrew-publish.yml  jules-dependency-upgrade.yml  jules-task.yml  kicad-cli-smoke.yml  lint-fast.yml  lock.yml  mcp-registry.yml  mirror-personal.yml  mirror-releases-back.yml  mutation.yml  pr-size.yml  publish-ci-status-to-personal.yml  publish.yml  release-please.yml  release.yml  review-thread-gate.yml  scoop-publish.yml  scorecard.yml  security.yml  stale.yml  static-analysis.yml  sync-from-canonical.yml  sync-labels.yml  sync-to-org.yml  trivy.yml
.husky/: commit-msg  pre-commit  pre-push
docs/: autonomy.md  branch-protection.md  configuration.md  demo-media.md  development.md  doppler-setup.md  index.md  maintenance-policy.md  privacy.md  public-listing.md  publishing.md  release-process.md  repository-operations.md  testing.md  tools-reference.generated.md  tools-reference.md  workflow-security.md
npm-wrapper/: README.md  package.json
reports/: open_questions.md  phase0_baseline.md  phase11_summary.md  phase13_summary.md  phase14_summary.md  phase15_summary.md  phase1_followups.md  phase1_summary.md  phase2_summary.md  phase3_summary.md  phase4_summary.md  phase5_summary.md  phase6_summary.md  phase7_summary.md  phase9_summary.md  plan_drift.md
scripts/: _placeholder_hashes.json  branch_hygiene_report.py  bump_version.py  check-review-threads.mjs  check_docker_metadata.py  check_icon_assets.py  check_no_pcbnew.py  check_package_metadata.py  check_release_preflight.py  check_submission_readiness.py  check_workflows.py  classify-gh-failure.mjs  generate_synthetic_demo.py  generate_tools_reference.py  record_demo.sh  render_icons.py  render_screenshots.py  repo-cleanup.sh  security_local.py  sync-remotes.ps1  sync-remotes.sh  sync_mcp_metadata.py  validate_mcp_manifest.py  verify_doppler_secrets.sh  workflow_security.py
tests/: conftest.py
(+171 files in other folders)
